--- a/main.html
+++ b/main.html
@@ -11,6 +11,11 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+<main class="accio" id="job" style="width=150px" height="150px" background color="#000000">
+	<p class="hello-accio">Hello Accio Job</p>
+	
+</main>
+	
 </body>
 
 </html>
