--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-<main class="accio" id="job" style="width=150px" height="150px" background color="#000000">
+<main class="accio" id="job" >
 	<p class="hello-accio">Hello Accio Job</p>
 	
 </main>
